# ZJE-BSc-BIA4-group-08

./: .gitignore  .pylintrc  License.md  Makefile  News.md  README.md  Readme.md  TODO.md  compile_ui.py  error_macos.yml  get_imports.sh  notebook-checkin.sh  notebook-checkout.sh  pylint-wrapper.sh  pyproject.toml  pytype.cfg  requirements-dev.txt  requirements.txt  run.sh  scc.sh  setup.py
data_analysis/: .gitignore  convert_new_db_format_to_old.py  covid_image  img_enh.py  ml_screen.ipynb.py  test_new_database.ipynb.py  user_preprocess.py  user_proces.py
doc/: .gitignore  Makefile  apiref.md  conf.py  develop.md  index.md  news.md  user.md
doc/ipynb/: data_structure.ipynb.py  ml_pp.ipynb.py
doc/news/: 2022-10-26-0.md
env/: BIA4Env.yml  BIA4Env_Linux.yml  BIA4Env_MacOS.yml  BIA4Env_Windows.yml  BIA_COVID_CLASS_Dev.yml  BIA_COVID_CLASS_Exec.yml
pretrained/: Readme.md  ml_cnn_cpu.toml  ml_cnn_cuda.toml  ml_extra_trees.toml  ml_knn.toml  ml_resnet50_cpu.toml  ml_resnet50_cuda.toml  ml_rf.toml  ml_svc.toml  ml_vote.toml  ml_xgb.toml  pp_adapt_hist.toml  pp_plain.toml  pp_scgan.toml  pp_unsharp.toml  scgan_cuda.toml
src/BIA_COVID_CLASS/: __init__.py
src/BIA_COVID_CLASS/algorithm/: gbt_lightbm.py  knn_sklearn.py  svm_sklearn.py
src/BIA_COVID_CLASS/covid_helper/: covid_dataset.py
src/BIA_COVID_CLASS/main/: convert_figures_to_numpy.py
src/BIA_G8/: __init__.py
src/BIA_G8/_main/: _method_selector_gui.py  convert_figures_to_numpy.py  data_explorer.py  data_explorer_gui.py  end_page_function.py  lps_rc.py  method_page_function.py  perform_ml.py  perform_ml_gui.py  preprocessor_explorer.py  preprocessor_explorer_gui.py  try_classification_pipeline.py
src/BIA_G8/_ui/: __init__.py  attention_page.ui  classification.ui  data_explorer.ui  lps.qrc  main_page.ui  method_selector.ui  preprocessor_explorer_main_page.ui  win95.qrc
src/BIA_G8/algorithm/: gbt_lightbm.py  knn_sklearn.py  svm_sklearn.py  torch_test.py
src/BIA_G8/covid_helper/: covid_dataset.py
src/BIA_G8/data_analysis/: __init__.py  analysis_config.py  brute_force_grid_search.py  covid_dataset.py  covid_dataset_configuration.py
src/BIA_G8/helper/: __init__.py  io_helper.py  joblib_helper.py  matplotlib_helper.py  metadata_helper.py  ml_helper.py  ndarray_helper.py  sitk_helper.py  torch_helper.py  train_helper.py  typing.py
src/BIA_G8/main/: convert_figures_to_numpy.py
src/BIA_G8/model/: __init__.py  classifier.py  densenet_wrapper.py  preprocesor_pipeline.py  preprocessor.py  sklearn_knn.py  unet_2d.py  unet_3d.py  upscaller_preprocessor.py
src/BIA_G8/torch_modules/: __init__.py  describe.py  scgan.py  torchvision_resnet50.py  toy_cnn.py
src/BIA_G8_DATA_ANALYSIS/: __init__.py  analysis_config.py  brute_force_grid_search.py  covid_dataset.py  plot_diagnose_cnn.R  plot_gs.R  try_analysis_config.py  try_brute_force_grid_search.py  try_classification_pipeline.py  try_diagnose_cnn.py  try_train_classifiers.py  try_train_toy_classifiers.py
src/BIA_KiTS19/: __init__.py
src/BIA_KiTS19/algorithm/: unet_3d.py  z_axis_2d_unet.py
src/BIA_KiTS19/helper/: converter.py  data_helper.py  dataset_2d_helper.py  dataset_helper.py  io_helper.py  joblib_helper.py  k3d_helper.py  matplotlib_helper.py  ml_2d_helper.py  ml_helper.py  ndarray_helper.py  sitk_helper.py  skimage_helper.py  torch_helper.py
src/BIA_KiTS19/main/: convert_nifti_to_np.py  create_2d_dataset.py
src/BIA_KiTS19/model/: __init__.py  unet_2d.py  unet_3d.py
src/ipynb/: data_structure.ipynb.py  explore_data.ipynb.py  ml_pp.ipynb.py
support/: pylint-wrapper.sh
test/BIA_COVID_CLASS_test/covid_helper/: test_dataset.py  test_image.py
test/BIA_G8_DATA_ANALYSIS_test/covid_helper/: test_dataset.py  test_image.py
test/BIA_G8_test/covid_helper/: test_dataset.py  test_image.py
test/BIA_G8_test/data_analysis/covid_helper/: __init__.py  test_dataset.py  test_image.py
test/BIA_G8_test/helper/: io_helper_test.py  ndarray_helper_test.py
test/BIA_G8_test/model/: test_classifier.py  test_preprocessor.py  test_preprocessor_pipeline.py
test/BIA_KiTS19_test/helper/: io_helper_test.py  ndarray_helper_test.py
