[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "BIA_COVID_CLASS"
description = "A COVID Image Classifier Using Traditional- and Deep Learning Methods"
authors = [
    { name = "Niels Zeilemaker", email = "nielszeilemaker@godatadriven.com" },
    { name = "Niels Zeilemaker II", email = "nielszeilemaker2@godatadriven.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: R",
]
requires-python = ">=3.8"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools]
license-files = ["License.md", "Copying.md"]

[tool.setuptools.dynamic]
version = { attr = "BIA_G8.__version__" }
readme = { file = "Readme.md" }
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = " --doctest-modules -vv --continue-on-collection-errors --junitxml=pytest/junit.xml --cov --cov-report=html --html=pytest/pytest_report.html --self-contained-html --ignore-glob='*.ipynb.py'"
testpaths = ["test", "src"]
log_level = 8
log_file = "log/pytest.log"
log_file_level = 8
log_cli = false
junit_logging = "all"
junit_log_passing_tests = true
junit_duration_report = "call"

[tool.coverage.run]
source = [
    "src",
]
omit = [
    "*/_main/*",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.html]
directory = "pytest/cov_html"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
